{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 66,
  "lineage": "d8208646-24d1-79e7-b3f9-9ca5796fccf2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_testing_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 1234,
            "id": "sgrule-2618645715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b6b341057826aa58",
            "security_group_rule_id": "sgr-0f8aa7cd3f457a427",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 1234,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594311320189:vpc/vpc-05244b44fae14387b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0736c8db08d03d57a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-04d009bd2da6a28f8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05244b44fae14387b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02c54f3d004124d2a",
            "owner_id": "594311320189"
          }
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_exam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:594311320189:loadbalancer/app/webserver-stage-alb-exam/8c47097e15fa6595",
            "arn_suffix": "app/webserver-stage-alb-exam/8c47097e15fa6595",
            "desync_mitigation_mode": "defensive",
            "dns_name": "webserver-stage-alb-exam-527415821.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:594311320189:loadbalancer/app/webserver-stage-alb-exam/8c47097e15fa6595",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webserver-stage-alb-exam",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b6b341057826aa58"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04d9e759732c38938"
              },
              {
                "subnet_id": "subnet-059f5a923cafcf992"
              },
              {
                "subnet_id": "subnet-06a4d52474aa7cba7"
              },
              {
                "subnet_id": "subnet-0ca46d98c9f04910a"
              }
            ],
            "subnets": [
              "subnet-04d9e759732c38938",
              "subnet-059f5a923cafcf992",
              "subnet-06a4d52474aa7cba7",
              "subnet-0ca46d98c9f04910a"
            ],
            "vpc_id": "vpc-05244b44fae14387b",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnets.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:594311320189:listener/app/webserver-stage-alb-exam/8c47097e15fa6595/114a1be2f7da1756",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404:page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:594311320189:listener/app/webserver-stage-alb-exam/8c47097e15fa6595/114a1be2f7da1756",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:594311320189:loadbalancer/app/webserver-stage-alb-exam/8c47097e15fa6595",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_lb.alb_exam",
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnets.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:594311320189:targetgroup/webserver-stage-tf-asg-tg-exam/70fbe5bf8d0b7fbf",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:594311320189:listener-rule/app/webserver-stage-alb-exam/8c47097e15fa6595/114a1be2f7da1756/03cf66b0eec02c95",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:594311320189:listener-rule/app/webserver-stage-alb-exam/8c47097e15fa6595/114a1be2f7da1756/03cf66b0eec02c95",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:594311320189:listener/app/webserver-stage-alb-exam/8c47097e15fa6595/114a1be2f7da1756",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_lb.alb_exam",
            "module.webserver_cluster.aws_lb_listener.http",
            "module.webserver_cluster.aws_lb_target_group.asg_tg",
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnets.default",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:594311320189:targetgroup/webserver-stage-tf-asg-tg-exam/70fbe5bf8d0b7fbf",
            "arn_suffix": "targetgroup/webserver-stage-tf-asg-tg-exam/70fbe5bf8d0b7fbf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:594311320189:targetgroup/webserver-stage-tf-asg-tg-exam/70fbe5bf8d0b7fbf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webserver-stage-tf-asg-tg-exam",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05244b44fae14387b"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594311320189:security-group/sg-0b6b341057826aa58",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b6b341057826aa58",
            "ingress": [],
            "name": "webserver-stage-alb",
            "name_prefix": "",
            "owner_id": "594311320189",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05244b44fae14387b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594311320189:security-group/sg-0b90eb4b54f50404c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b90eb4b54f50404c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "webserver-stage-instance",
            "name_prefix": "",
            "owner_id": "594311320189",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05244b44fae14387b"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-76246621",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b6b341057826aa58",
            "security_group_rule_id": "sgr-012a5db537ba79282",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3695376015",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b6b341057826aa58",
            "security_group_rule_id": "sgr-094a2be17e5ae4358",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}